<resources>
    <string name="app_name">UdEstoque</string>
    <string name="telefone_fornecedor">Informe o número do telefone</string>
    <string name="info_fornecedor">Informe o fornecedor</string>
    <string name="info_quantidade">Informe a quantidade</string>
    <string name="info_produto">Informe o nome do produto</string>
    <string name="info_preco">Informe o preço</string>
    <string name="add_produto">Salvar</string>
    <string name="menu_voltar">Voltar</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="produto_0">O App ainda não possui produtos cadastrados</string>

    <string name="valida_campo_nome">Por favor, informe o nome do produto</string>
    <string name="valida_campo_preco">Por favor, informe o preço do produto</string>
    <string name="valida_campo_quantidade">Por favor, informe a quantidade do produto</string>
    <string name="valida_campo_fornecedor">Por favor, informe o nome do fornecedor</string>
    <string name="valida_campo_fornecedor_telefone">Por favor, informe o telefone do forncedor</string>

    <string name="insere_erro">Houve um erro ao inserir o produto.</string>
    <string name="altera_erro">Houve um erro ao editar o produto.</string>
    <string name="menu_editar">Editar</string>

    <string name="menu_detalhes">detalhes</string>
    <string name="imagem">Imagem</string>
    <string name="vender">Vender</string>
    <string name="detalhe_titulo">Detalhes de Protudos</string>
    <string name="adiciona_quantidade">+</string>
    <string name="remove_quantidade">-</string>
    <string name="remove_quantidade_erro">Erro ao realizar a venda</string>
    <string name="tag_preco">Preço: </string>
    <string name="tag_quantidade">Quantidade: </string>
    <string name="delete_mensagem_confirmacao">Tem certeza que deseja exluir o produto?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="excluir">Excluir</string>
    <string name="excluir_erro">Houve um erro ao tentar excluir o produto</string>
    <string name="detallhe_label_produto">Produto</string>
    <string name="detalhe_label_preco" >Preço</string>
    <string name="detalhe_label_quantidade">Quantidade</string>
    <string name="detalhe_label_forncedor">Fornecedor</string>
    <string name="detalhe_label_telefone">Telefone</string>
</resources>
