<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetalhesActivity">


        <TextView
            android:id="@+id/txtTituloDetalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhe_titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDetalheNome"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"
            android:textSize="@dimen/tamanho_texto_detalhe"
            app:layout_constraintStart_toEndOf="@+id/txtLabelProduto"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloDetalhes" />

        <TextView
            android:id="@+id/txtDetalhePreco"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"
            android:textSize="@dimen/tamanho_texto_detalhe"
            app:layout_constraintStart_toEndOf="@+id/txtLabelPreco"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalheNome" />

        <TextView
            android:id="@+id/txtDetalheQuantidade"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"
            android:textSize="@dimen/tamanho_texto_detalhe"
            app:layout_constraintStart_toEndOf="@+id/txtLabelQuantidade"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalhePreco" />

        <TextView
            android:id="@+id/txtDetalheFornecedor"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"
            android:textSize="@dimen/tamanho_texto_detalhe"
            app:layout_constraintStart_toEndOf="@+id/txtLabelFornecedor"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalheQuantidade" />

        <TextView
            android:id="@+id/txtDetalheTefoneFornecedor"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"
            android:textSize="@dimen/tamanho_texto_detalhe"
            app:layout_constraintStart_toEndOf="@+id/txtLabelTelefone"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalheFornecedor" />

        <Button
            android:id="@+id/btnAddDetalhes"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/adiciona_quantidade"
            app:layout_constraintBottom_toBottomOf="@+id/txtDetalheQuantidade"
            app:layout_constraintEnd_toStartOf="@+id/btnRemoveDetalhes" />

        <Button
            android:id="@+id/btnRemoveDetalhes"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:text="@string/remove_quantidade"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddDetalhes"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:text="@string/excluir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetalheTefoneFornecedor" />

        <TextView
            android:id="@+id/txtLabelProduto"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/detalhe_altura_text"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detallhe_label_produto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloDetalhes" />

        <TextView
            android:id="@+id/txtLabelPreco"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhe_label_preco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelProduto" />

        <TextView
            android:id="@+id/txtLabelQuantidade"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhe_label_quantidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelPreco" />

        <TextView
            android:id="@+id/txtLabelFornecedor"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhe_label_forncedor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelQuantidade" />

        <TextView
            android:id="@+id/txtLabelTelefone"
            style="@style/detalhe_text"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/detalhe_label_telefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelFornecedor" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
